--- a/GalleryPage.xaml
+++ b/GalleryPage.xaml
@@ -7,7 +7,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    <Grid Background="Transparent">
+        <TextBlock Text="Gallery Page"
+                   Foreground="White"
+                   FontSize="40"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"/>
     </Grid>
 </Page>
